--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.version>3.0-SNAPSHOT</maven.version>
+    <maven.version>3.0.3</maven.version>
   </properties>
   
   <dependencies>
@@ -164,45 +164,6 @@
             <goals>
               <goal>attached</goal>
             </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.1.1</version>
-        <executions>
-          <execution>
-            <id>run-elisp-tests</id>
-            <phase>test</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <configuration>
-              <executable>emacs</executable>
-              <arguments>
-                <argument>-Q</argument>
-                <argument>--batch</argument>
-                <argument>-l</argument>
-                <argument>src/test/lisp/all-tests.el</argument>
-              </arguments>
-            </configuration>
-          </execution>
-          <execution>
-            <id>run-loadability-test</id>
-            <phase>test</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <configuration>
-              <executable>emacs</executable>
-              <arguments>
-                <argument>-Q</argument>
-                <argument>--batch</argument>
-                <argument>-l</argument>
-                <argument>src/test/lisp/load-all.el</argument>
-              </arguments>
-            </configuration>
           </execution>
         </executions>
       </plugin>
